# ComputerGeometry

./: .clangd  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/Viewer2d/: CMakeLists.txt  bezierwidget.cpp  bezierwidget.h  convexhullwidget.cpp  convexhullwidget.h  convexpolygonboolewidget.cpp  convexpolygonboolewidget.h  drawwidget.cpp  drawwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointlocationwidget.cpp  pointlocationwidget.h  precisionconverters.cpp  precisionconverters.h  precisiondrawwidget.cpp  precisiondrawwidget.h  segmentintersectionwidget.cpp  segmentintersectionwidget.h  triangulationwidget.cpp  triangulationwidget.h
src/lib/: CMakeLists.txt
src/lib/PlaneGeometry/: CMakeLists.txt  PlaneOperations.cpp  PlaneOperations.h
src/tests/: CMakeLists.txt  PlaneGeometryTests.cpp
